# regex-automata

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: main.yml
src/regex_automata/: __init__.py  common.py  errors.py  pattern.py
src/regex_automata/automata/: nfa.py  nfa_evaluator.py  nfa_visualizer.py  rangeset.py
src/regex_automata/parser/: ast.py  ast_processor.py  ast_visualizer.py  parser.py  tokenizer.py  tokens.py
src/regex_automata/regex/: flags.py  match.py  nfa_builder.py  nfa_evaluator.py  pattern.py  regex.py
tests/: test_nfa.py  test_parser.py  test_queue.py  test_rangeset.py  test_re_tests.py  test_regex.py
tests/data/: lol_nfa.json  lol_nfa_epsilon.json
