[project]
name = "regex-automata"
description = "Library for regular expressions using finite automata"
readme = "README.md"
authors = [{name = "Tomas Karabela", email = "tkarabela@seznam.cz"}]
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.11"
dependencies = [
    "graphviz~=0.21",
]
dynamic = ["version"]
keywords = ["regular expressions", "regex", "finite automata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/tkarabela/regex-automata"
Repository = "https://github.com/tkarabela/regex-automata.git"
Issues = "https://github.com/tkarabela/regex-automata/issues"

[dependency-groups]
dev = [
    "mypy~=1.18",
    "pytest~=8.4",
    "pytest-cov~=7.0",
    "ruff~=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/regex_automata/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]

[tool.mypy]
strict = "True"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
files = "src/**/*.py, tests/*.py"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = "False"
disallow_untyped_defs = "False"
